L06-PUT, DELETE, validation and handle errors
